tests/baselines/reference/unusedParametersinConstructor2.errors.txt
unusedParametersinConstructor2.ts(2,17): error TS6133: 'param1' is declared but its value is never read.


==== unusedParametersinConstructor2.ts (1 errors) ====
    class greeter {
        constructor(param1: string, param2: string) {
                    ~~~~~~
!!! error TS6133: 'param1' is declared but its value is never read.
            param2 = param2 + "dummy value";
        }
    }